eliminacion de archivos innecesarios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
     <!-- slide -->
-    <link rel="stylesheet" href="assets/css/slide.css">
+    <link rel="stylesheet" href="assets/css/slide.css" />
 
     <!-- Gradiant Styles -->
     <link rel="stylesheet" href="assets/css/gradiantStyle.css" />
@@ -28,30 +28,14 @@
 
     <!-- Google fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600"
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&family=Titillium+Web:wght@400;600&display=swap"
       rel="stylesheet"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Ionic icons-->
-    <link
-      href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css"
-      rel="stylesheet"
-    />
     <!-- Animations-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-    />
-
-    <!-- Material Icon -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
     />
 
     <!-- IconWhastApp -->
@@ -115,95 +99,115 @@
     <div class="content-slide">
       <div class="slider">
         <div class="box1 box">
-            <div class="bg"></div>
-            <div class="details">
-              <h3 class="slide-title">I'm the first Box</h3>
-              <p class="p-slide">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
-                  diam, ac mattis orci pellentesque eget.
-              </p>
-              <button class="button-slide">Check Now</button>
-            </div>
+          <div class="bg"></div>
+          <div class="details">
+            <h3 class="slide-title">I'm the first Box</h3>
+            <p class="p-slide">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
+              pellentesque eget.
+            </p>
+            <button class="button-slide">Check Now</button>
+          </div>
 
-            <div class="illustration">
-                <!-- Inner Reemplazar (add img) -->
-                <div class="inner">
-                  <img class="img-side" src="assets/images/portfolio-01.jpg" alt="">
-                </div>
+          <div class="illustration">
+            <!-- Inner Reemplazar (add img) -->
+            <div class="inner">
+              <img
+                class="img-side"
+                src="assets/images/portfolio-01.jpg"
+                alt=""
+              />
             </div>
+          </div>
         </div>
         <div class="box2 box">
-            <div class="bg"></div>
-            <div class="details">
-              <h3 class="slide-title">I'm the first Box</h3>
-              <p class="p-slide">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
-                  diam, ac mattis orci pellentesque eget.
-              </p>
-              <button class="button-slide">Check Now</button>
-            </div>
+          <div class="bg"></div>
+          <div class="details">
+            <h3 class="slide-title">I'm the first Box</h3>
+            <p class="p-slide">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
+              pellentesque eget.
+            </p>
+            <button class="button-slide">Check Now</button>
+          </div>
 
-            <div class="illustration">
-                <div class="inner">
-                  <img class="img-side" src="assets/images/portfolio-02.jpg" alt="">
-                </div>
+          <div class="illustration">
+            <div class="inner">
+              <img
+                class="img-side"
+                src="assets/images/portfolio-02.jpg"
+                alt=""
+              />
             </div>
+          </div>
         </div>
         <div class="box3 box">
-            <div class="bg"></div>
-            <div class="details">
-              <h3 class="slide-title">I'm the first Box</h3>
-              <p class="p-slide">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
-                  diam, ac mattis orci pellentesque eget.
-              </p>
-              <button class="button-slide">Check Now</button>
-            </div>
+          <div class="bg"></div>
+          <div class="details">
+            <h3 class="slide-title">I'm the first Box</h3>
+            <p class="p-slide">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
+              pellentesque eget.
+            </p>
+            <button class="button-slide">Check Now</button>
+          </div>
 
-            <div class="illustration">
-                <div class="inner">
-                  <img class="img-side" src="assets/images/portfolio-06.jpg" alt="">
-                </div>
+          <div class="illustration">
+            <div class="inner">
+              <img
+                class="img-side"
+                src="assets/images/portfolio-06.jpg"
+                alt=""
+              />
             </div>
+          </div>
         </div>
         <div class="box4 box">
-            <div class="bg"></div>
-            <div class="details">
-              <h3 class="slide-title">I'm the first Box</h3>
-              <p class="p-slide">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
-                  diam, ac mattis orci pellentesque eget.
-              </p>
-              <button class="button-slide">Check Now</button>
-            </div>
+          <div class="bg"></div>
+          <div class="details">
+            <h3 class="slide-title">I'm the first Box</h3>
+            <p class="p-slide">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
+              pellentesque eget.
+            </p>
+            <button class="button-slide">Check Now</button>
+          </div>
 
-            <div class="illustration">
-                <div class="inner">
-                  <img class="img-side" src="assets/images/portfolio-07.jpg" alt="">
-                </div>
+          <div class="illustration">
+            <div class="inner">
+              <img
+                class="img-side"
+                src="assets/images/portfolio-07.jpg"
+                alt=""
+              />
             </div>
+          </div>
         </div>
         <div class="box5 box">
-            <div class="bg"></div>
-            <div class="details">
-              <h3 class="slide-title">I'm the first Box</h3>
-              <p class="p-slide">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
-                  diam, ac mattis orci pellentesque eget.
-              </p>
-              <button class="button-slide">Check Now</button>
-            </div>
+          <div class="bg"></div>
+          <div class="details">
+            <h3 class="slide-title">I'm the first Box</h3>
+            <p class="p-slide">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
+              pellentesque eget.
+            </p>
+            <button class="button-slide">Check Now</button>
+          </div>
 
-            <div class="illustration">
-                <div class="inner">
-                  <img class="img-side" src="assets/images/portfolio-05.jpg" alt="">
-                </div>
+          <div class="illustration">
+            <div class="inner">
+              <img
+                class="img-side"
+                src="assets/images/portfolio-05.jpg"
+                alt=""
+              />
             </div>
+          </div>
         </div>
       </div>
       <div class="trail">
@@ -223,7 +227,7 @@
       <div class="popup-whatsapp fadeIn">
         <div class="content-whatsapp -top">
           <button type="button" class="closePopup">
-            <i class="material-icons icon-font-color">close</i>
+            <i class="fas fa-times"></i>
           </button>
 
           <p>
@@ -240,7 +244,7 @@
           />
 
           <button class="send-msPopup" id="send-btn" type="button">
-            <i class="material-icons icon-font-color--black">send</i>
+            <i class="far fa-paper-plane"></i>
           </button>
         </div>
       </div>
@@ -615,8 +619,8 @@
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/popper.min.js"></script>
+    <!-- <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/popper.min.js"></script> -->
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- Font Awasome -->
     <script
