--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <div class="inner">
               <img
                 class="img-side"
+                loading="lazy"
                 src="assets/images/portfolio-01.jpg"
                 alt=""
               />
@@ -137,6 +138,7 @@
             <div class="inner">
               <img
                 class="img-side"
+                loading="lazy"
                 src="assets/images/portfolio-02.jpg"
                 alt=""
               />
@@ -159,6 +161,7 @@
             <div class="inner">
               <img
                 class="img-side"
+                loading="lazy"
                 src="assets/images/portfolio-06.jpg"
                 alt=""
               />
@@ -181,6 +184,7 @@
             <div class="inner">
               <img
                 class="img-side"
+                loading="lazy"
                 src="assets/images/portfolio-07.jpg"
                 alt=""
               />
@@ -203,6 +207,7 @@
             <div class="inner">
               <img
                 class="img-side"
+                loading="lazy"
                 src="assets/images/portfolio-05.jpg"
                 alt=""
               />
@@ -231,8 +236,8 @@
           </button>
 
           <p>
-            <img src="assets/images/secretary.png" width="50" /> Hola, ¿en que
-            podemos ayudarle?
+            <img loading="lazy" src="assets/images/secretary.png" width="50" />
+            Hola, ¿en que podemos ayudarle?
           </p>
         </div>
         <div class="content-whatsapp -bottom">
@@ -301,6 +306,7 @@
                   <h3>Amarres para toda la vida</h3>
                 </div>
                 <img
+                  loading="lazy"
                   src="assets/images/portfolio-07.jpg"
                   class="img-fluid images-pequeñas"
                   alt="Portfolio 01"
@@ -318,6 +324,7 @@
                   <h3>Retiro de maldad</h3>
                 </div>
                 <img
+                  loading="lazy"
                   src="assets/images/portfolio-06.jpg"
                   class="img-fluid"
                   alt="Portfolio 02"
@@ -335,6 +342,7 @@
                   <h3>Hechizos de amor</h3>
                 </div>
                 <img
+                  loading="lazy"
                   src="assets/images/portfolio-02.jpg"
                   class="img-fluid"
                   alt="Portfolio 03"
@@ -352,6 +360,7 @@
                   <h3>Recupera tu pareja</h3>
                 </div>
                 <img
+                  loading="lazy"
                   src="assets/images/4.jpg"
                   class="img-fluid"
                   alt="Portfolio 04"
@@ -369,6 +378,7 @@
                   <h3>Amarres con foto</h3>
                 </div>
                 <img
+                  loading="lazy"
                   src="assets/images/portfolio-05.jpg"
                   class="img-fluid"
                   alt="Portfolio 05"
@@ -386,6 +396,7 @@
                   <h3>Amarres para matrimonio</h3>
                 </div>
                 <img
+                  loading="lazy"
                   src="assets/images/portfolio-01.jpg"
                   class="img-fluid"
                   alt="Portfolio 06"
@@ -425,6 +436,7 @@
                   target="_bank"
                 >
                   <img
+                    loading="lazy"
                     src="assets/images/testimonios/testimonio1.jpg"
                     class="rounded"
                     alt=""
@@ -445,6 +457,7 @@
                   target="_bank"
                 >
                   <img
+                    loading="lazy"
                     src="assets/images/testimonios/testimonio2.jpg"
                     class="rounded"
                     alt=""
@@ -465,6 +478,7 @@
                   target="_bank"
                 >
                   <img
+                    loading="lazy"
                     src="assets/images/testimonios/testimonio3.jpg"
                     class="rounded"
                     alt=""
