--- a/index.html
+++ b/index.html
@@ -631,8 +631,8 @@
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/popper.min.js"></script> -->
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- Font Awasome -->
     <script
