texto de slider

--- a/index.html
+++ b/index.html
@@ -101,13 +101,16 @@
         <div class="box1 box">
           <div class="bg"></div>
           <div class="details">
-            <h3 class="slide-title">I'm the first Box</h3>
+            <h3 class="slide-title">Amarres para toda la vida</h3>
             <p class="p-slide">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
-              pellentesque eget.
+              ¿Humillaciones, tristezas, lagrimas, dolor, maltrato, crisis de
+              pareja, desprecio? ¿Crisis de pareja? No permita que otras
+              personas se interpongan en su relación... DOMINIO DE AMORES
+              REBELDES. UNION DE PAREJAS DEL MISMO SEXO
             </p>
-            <button class="button-slide">Check Now</button>
+            <button class="button-slide">
+              <i class="fa fa-whatsapp"></i> Contáctanos
+            </button>
           </div>
 
           <div class="illustration">
@@ -124,20 +127,24 @@
         <div class="box2 box">
           <div class="bg"></div>
           <div class="details">
-            <h3 class="slide-title">I'm the first Box</h3>
+            <h3 class="slide-title">Limpiezas, Retiros de maldad</h3>
             <p class="p-slide">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
-              pellentesque eget.
+              Negocios momento a otro se les bajan las ventas, la gente no
+              entra, la mercancía se deteriora, fincas que no progresan, se
+              endeudan intentando hacer que las cosas mejoren. Aleje las malas
+              energías o envidias que existen y que pueden bloquear personas o
+              negocios.
             </p>
-            <button class="button-slide">Check Now</button>
+            <button class="button-slide">
+              <i class="fa fa-whatsapp"></i> Contáctanos
+            </button>
           </div>
 
           <div class="illustration">
             <div class="inner">
               <img
                 class="img-side"
-                src="assets/images/portfolio-02.jpg"
+                src="assets/images/portfolio-06.jpg"
                 alt=""
               />
             </div>
@@ -146,13 +153,16 @@
         <div class="box3 box">
           <div class="bg"></div>
           <div class="details">
-            <h3 class="slide-title">I'm the first Box</h3>
+            <h3 class="slide-title">Lecturas de Tarot</h3>
             <p class="p-slide">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
-              pellentesque eget.
+              Con una lectura profesional del TAROT usted podría saber cómo le
+              va a ir en los negocios, viajes, relaciones amorosas, que le
+              espera en el futuro, en la salud, estudios, hogar, hijos o dinero.
+              Si su pareja le ama, si le conviene o si le es fiel.
             </p>
-            <button class="button-slide">Check Now</button>
+            <button class="button-slide">
+              <i class="fa fa-whatsapp"></i> Contáctanos
+            </button>
           </div>
 
           <div class="illustration">
@@ -160,7 +170,7 @@
               <img
                 class="img-side"
                 loading="lazy"
-                src="assets/images/portfolio-06.jpg"
+                src="assets/images/portfolio-02.jpg"
                 alt=""
               />
             </div>
@@ -175,7 +185,9 @@
               lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
               pellentesque eget.
             </p>
-            <button class="button-slide">Check Now</button>
+            <button class="button-slide">
+              <i class="fa fa-whatsapp"></i> Contáctanos
+            </button>
           </div>
 
           <div class="illustration">
@@ -337,7 +349,7 @@
                 target="_bank"
               >
                 <div class="portfolio-details">
-                  <h3>Hechizos de amor</h3>
+                  <h3>Lecturas de Tarot</h3>
                 </div>
                 <img
                   loading="lazy"
