Cambios en contenido de políticas

--- a/index.html
+++ b/index.html
@@ -179,11 +179,12 @@
         <div class="box4 box">
           <div class="bg"></div>
           <div class="details">
-            <h3 class="slide-title">I'm the first Box</h3>
+            <h3 class="slide-title">Recupera tu pareja</h3>
             <p class="p-slide">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
-              pellentesque eget.
+              ¿Han jugado con sus sentimientos? ¿Le abandonaron? ¿Quiere
+              recuperar a su pareja? ¿Quiere ser felíz? ¿Quiere enamorar a
+              alguien? ¿Quiere ser atractiva/o ante los demás? ¿Quiere que
+              realmente le amen? ¿No puede tener hijos?
             </p>
             <button class="button-slide">
               <i class="fa fa-whatsapp"></i> Contáctanos
@@ -204,11 +205,11 @@
         <div class="box5 box">
           <div class="bg"></div>
           <div class="details">
-            <h3 class="slide-title">I'm the first Box</h3>
+            <h3 class="slide-title">Rituales para la suerte</h3>
             <p class="p-slide">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
-              pellentesque eget.
+              Si a usted le gusta jugar chance, rifas, loterías, baloto, casino,
+              pelea de gallos, carrera de caballos, o cualquier juego que
+              implique apostar dinero.
             </p>
             <button class="button-slide">Check Now</button>
           </div>
@@ -317,7 +318,7 @@
                 </div>
                 <img
                   loading="lazy"
-                  src="assets/images/portfolio-07.jpg"
+                  src="assets/images/portfolio-01.jpg"
                   class="img-fluid images-pequeñas"
                   alt="Portfolio 01"
                 />
@@ -385,7 +386,7 @@
                 target="_bank"
               >
                 <div class="portfolio-details">
-                  <h3>Amarres con foto</h3>
+                  <h3>Rituales para la suerte</h3>
                 </div>
                 <img
                   loading="lazy"
@@ -403,11 +404,11 @@
                 target="_bank"
               >
                 <div class="portfolio-details">
-                  <h3>Amarres para matrimonio</h3>
+                  <h3>Limpiezas</h3>
                 </div>
                 <img
                   loading="lazy"
-                  src="assets/images/portfolio-01.jpg"
+                  src="assets/images/portfolio-07.jpg"
                   class="img-fluid"
                   alt="Portfolio 06"
                 />
@@ -594,15 +595,15 @@
         </div>
         <div class="row">
           <p>
-            PARA MAYORES DE 18 AÑOS. Si no tienes 18 años NO ESTÁ PERMITIDO el
-            acceso a esta página. De acuerdo a las legislaciones que se
-            encuentran vigentes: las videncias psíquicas, lectura de cartas,
-            predicciones y trabajos esotéricos tienen como finalidad entretener.
-            El servicio que se solicite no sustituye la atención médica, legal,
-            financiera, psicológica necesaria. Aceptas que accedes
-            voluntariamente a esta página y que los servicios brindados son
-            solicitados por decisión tuya, los cuales tienen un costo económico
-            el cual sera cubierto al aceptar el servicio.
+            EXCLUSIVO PARA MAYORES DE 18 AÑOS. NO ESTÁ PERMITIDO EL ACCESO A
+            MENORES DE 18 AÑOS. De acuerdo a las legislaciones que se encuentran
+            vigentes: las videncias psíquicas, lectura de cartas, predicciones y
+            trabajos esotéricos tienen como finalidad entretener. El servicio
+            que se solicite no sustituye la atención médica, legal, financiera,
+            psicológica necesaria. Aceptas que accedes voluntariamente a esta
+            página y que los servicios brindados son solicitados por decisión
+            tuya, los cuales tienen un costo económico el cual sera cubierto al
+            aceptar el servicio.
           </p>
         </div>
       </div>
