--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
               pelea de gallos, carrera de caballos, o cualquier juego que
               implique apostar dinero.
             </p>
-            <button class="button-slide">Check Now</button>
+            <button class="button-slide">
+              <i class="fa fa-whatsapp"></i> Contáctanos
+            </button>
           </div>
 
           <div class="illustration">
@@ -556,7 +558,7 @@
     <section id="politics">
       <div class="container">
         <div class="content-center">
-          <h2>Políticas de <b>privacidad</b></h2>
+          <h2>Políticas de <b>Privacidad</b></h2>
         </div>
         <div class="row mb-3">
           <p>
