direccionando enlaces de WhastApp

--- a/index.html
+++ b/index.html
@@ -108,9 +108,12 @@
               personas se interpongan en su relación... DOMINIO DE AMORES
               REBELDES. UNION DE PAREJAS DEL MISMO SEXO
             </p>
-            <button class="button-slide">
-              <i class="fa fa-whatsapp"></i> Contáctanos
-            </button>
+            <a href="https://api.whatsapp.com/send?phone=529991550898"
+            target="_bank">
+              <button class="button-slide">
+                <i class="fa fa-whatsapp"></i> Contáctanos
+              </button>
+            </a>
           </div>
 
           <div class="illustration">
@@ -135,9 +138,12 @@
               energías o envidias que existen y que pueden bloquear personas o
               negocios.
             </p>
-            <button class="button-slide">
-              <i class="fa fa-whatsapp"></i> Contáctanos
-            </button>
+            <a href="https://api.whatsapp.com/send?phone=529991550898"
+            target="_bank">
+              <button class="button-slide">
+                <i class="fa fa-whatsapp"></i> Contáctanos
+              </button>
+            </a>
           </div>
 
           <div class="illustration">
@@ -160,9 +166,12 @@
               espera en el futuro, en la salud, estudios, hogar, hijos o dinero.
               Si su pareja le ama, si le conviene o si le es fiel.
             </p>
-            <button class="button-slide">
-              <i class="fa fa-whatsapp"></i> Contáctanos
-            </button>
+            <a href="https://api.whatsapp.com/send?phone=529991550898"
+            target="_bank">
+              <button class="button-slide">
+                <i class="fa fa-whatsapp"></i> Contáctanos
+              </button>
+            </a>
           </div>
 
           <div class="illustration">
@@ -185,9 +194,12 @@
               lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
               pellentesque eget.
             </p>
-            <button class="button-slide">
-              <i class="fa fa-whatsapp"></i> Contáctanos
-            </button>
+            <a href="https://api.whatsapp.com/send?phone=529991550898"
+            target="_bank">
+              <button class="button-slide">
+                <i class="fa fa-whatsapp"></i> Contáctanos
+              </button>
+            </a>
           </div>
 
           <div class="illustration">
@@ -210,7 +222,12 @@
               lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
               pellentesque eget.
             </p>
-            <button class="button-slide">Check Now</button>
+            <a href="https://api.whatsapp.com/send?phone=529991550898"
+            target="_bank">
+              <button class="button-slide">
+                <i class="fa fa-whatsapp"></i> Contáctanos
+              </button>
+            </a>
           </div>
 
           <div class="illustration">
