imagenes de slider

--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
               personas se interpongan en su relación... DOMINIO DE AMORES
               REBELDES. UNION DE PAREJAS DEL MISMO SEXO
             </p>
-            <a href="https://api.whatsapp.com/send?phone=529991550898"
-            target="_bank">
+            <a
+              href="https://api.whatsapp.com/send?phone=529991550898"
+              target="_bank"
+            >
               <button class="button-slide">
                 <i class="fa fa-whatsapp"></i> Contáctanos
               </button>
@@ -138,8 +140,10 @@
               energías o envidias que existen y que pueden bloquear personas o
               negocios.
             </p>
-            <a href="https://api.whatsapp.com/send?phone=529991550898"
-            target="_bank">
+            <a
+              href="https://api.whatsapp.com/send?phone=529991550898"
+              target="_bank"
+            >
               <button class="button-slide">
                 <i class="fa fa-whatsapp"></i> Contáctanos
               </button>
@@ -166,8 +170,10 @@
               espera en el futuro, en la salud, estudios, hogar, hijos o dinero.
               Si su pareja le ama, si le conviene o si le es fiel.
             </p>
-            <a href="https://api.whatsapp.com/send?phone=529991550898"
-            target="_bank">
+            <a
+              href="https://api.whatsapp.com/send?phone=529991550898"
+              target="_bank"
+            >
               <button class="button-slide">
                 <i class="fa fa-whatsapp"></i> Contáctanos
               </button>
@@ -195,8 +201,10 @@
               alguien? ¿Quiere ser atractiva/o ante los demás? ¿Quiere que
               realmente le amen? ¿No puede tener hijos?
             </p>
-            <a href="https://api.whatsapp.com/send?phone=529991550898"
-            target="_bank">
+            <a
+              href="https://api.whatsapp.com/send?phone=529991550898"
+              target="_bank"
+            >
               <button class="button-slide">
                 <i class="fa fa-whatsapp"></i> Contáctanos
               </button>
@@ -223,8 +231,10 @@
               pelea de gallos, carrera de caballos, o cualquier juego que
               implique apostar dinero.
             </p>
-            <a href="https://api.whatsapp.com/send?phone=529991550898"
-            target="_bank">
+            <a
+              href="https://api.whatsapp.com/send?phone=529991550898"
+              target="_bank"
+            >
               <button class="button-slide">
                 <i class="fa fa-whatsapp"></i> Contáctanos
               </button>
@@ -288,7 +298,7 @@
       </button>
       <div class="circle-anime"></div>
     </div>
-    
+
     <section id="portfolio" class="bgLight">
       <div class="container-fluid">
         <div class="content-center">
