--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#hero">Inicio</a>
+              <a class="nav-link" href="#slide">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#portfolio">Servicios</a>
@@ -96,7 +96,7 @@
       slide
     ////////////////////// -->
 
-    <div class="content-slide">
+    <div id="slide" class="content-slide">
       <div class="slider">
         <div class="box1 box">
           <div class="bg"></div>
@@ -288,7 +288,7 @@
       </button>
       <div class="circle-anime"></div>
     </div>
-    
+
     <section id="portfolio" class="bgLight">
       <div class="container-fluid">
         <div class="content-center">
