--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Diego Velázquez" />
     <meta
       name="description"
-      content="Real Templo Sagrado. Amarres de amor, amarres con foto, conjuros, poderosos rituales, lecturas del Tarot.  Ofrezco el poder de mis servicios para México y Ecuador"
+      content="Real Templo Sagrado. Amarres de amor, limpiezas, conjuros, poderosos rituales para la suerte, lecturas del Tarot.  Ofrezco el poder de mis servicios para México y Ecuador"
     />
 
     <!-- Bootstrap CSS -->
