--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <h3 class="slide-title">Amarres para toda la vida</h3>
             <p class="p-slide">
               ¿Humillaciones, tristezas, lagrimas, dolor, maltrato, crisis de
-              pareja, desprecio? ¿Crisis de pareja? No permita que otras
-              personas se interpongan en su relación... DOMINIO DE AMORES
-              REBELDES. UNION DE PAREJAS DEL MISMO SEXO
+              pareja, desprecio? No permita que otras personas se interpongan en
+              su relación... DOMINIO DE AMORES REBELDES. UNION DE PAREJAS DEL
+              MISMO SEXO
             </p>
             <a
               href="https://api.whatsapp.com/send?phone=529991550898"
@@ -134,11 +134,10 @@
           <div class="details">
             <h3 class="slide-title">Limpiezas, Retiros de maldad</h3>
             <p class="p-slide">
-              Negocios momento a otro se les bajan las ventas, la gente no
-              entra, la mercancía se deteriora, fincas que no progresan, se
-              endeudan intentando hacer que las cosas mejoren. Aleje las malas
-              energías o envidias que existen y que pueden bloquear personas o
-              negocios.
+              Negocios de un momento a otro se les bajan las ventas, fincas que
+              no progresan, se endeudan intentando hacer que las cosas mejoren.
+              Aleje las malas energías o envidias que existen y que pueden
+              bloquear personas o negocios.
             </p>
             <a
               href="https://api.whatsapp.com/send?phone=529991550898"
@@ -168,7 +167,6 @@
               Con una lectura profesional del TAROT usted podría saber cómo le
               va a ir en los negocios, viajes, relaciones amorosas, que le
               espera en el futuro, en la salud, estudios, hogar, hijos o dinero.
-              Si su pareja le ama, si le conviene o si le es fiel.
             </p>
             <a
               href="https://api.whatsapp.com/send?phone=529991550898"
@@ -199,16 +197,16 @@
               ¿Han jugado con sus sentimientos? ¿Le abandonaron? ¿Quiere
               recuperar a su pareja? ¿Quiere ser felíz? ¿Quiere enamorar a
               alguien? ¿Quiere ser atractiva/o ante los demás? ¿Quiere que
-              realmente le amen? ¿No puede tener hijos?
+              realmente le amen?
+              <a
+                href="https://api.whatsapp.com/send?phone=529991550898"
+                target="_bank"
+              >
+                <button class="button-slide">
+                  <i class="fa fa-whatsapp"></i> Contáctanos
+                </button>
+              </a>
             </p>
-            <a
-              href="https://api.whatsapp.com/send?phone=529991550898"
-              target="_bank"
-            >
-              <button class="button-slide">
-                <i class="fa fa-whatsapp"></i> Contáctanos
-              </button>
-            </a>
           </div>
 
           <div class="illustration">
@@ -227,7 +225,7 @@
           <div class="details">
             <h3 class="slide-title">Rituales para la suerte</h3>
             <p class="p-slide">
-              Si a usted le gusta jugar chance, rifas, loterías, baloto, casino,
+              Es amante de los juegos de azar, rifas, loterías, baloto, casino,
               pelea de gallos, carrera de caballos, o cualquier juego que
               implique apostar dinero.
             </p>
