--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
       <div class="container">
         <ul class="list-inline">
           <li class="list-inline-item footer-menu">
-            <a href="#hero">Inicio</a>
+            <a href="#slide">Inicio</a>
           </li>
           <li class="list-inline-item footer-menu">
             <a href="#portfolio">Servicios</a>
